<resources>
    <string name="app_name">e-Student</string>
    <string name="todo">TODO</string>
    <string name="student_information_management_system">Student Information Management System</string>
    <string name="relience">Relience</string>
    <string name="password">" Password"</string>
    <string name="user_name">" User Name"</string>
    <string name="student_management_system">Student Management System</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password1">Password1</string>
    <string name="message">Message</string>
    <string name="communicate">Communicate</string>
    <string name="close_navi">Close</string>
    <string name="open_navi">Open</string>
    <string name="result_title">My Results</string>
    <string name="result_student_name">Chanuka Dilhara</string>
    <string name="result_student_no">IT19166070</string>
    <string name="result_student_email">chanuka77@gmail.com</string>
    <string name="result_student_rank">CA Avg</string>
    <string name="result_student_rank_value">80.00</string>
    <string name="result_student_avg">Exam Avg</string>
    <string name="result_student_avg_value">70.00</string>
    <string name="result_assignment_desc">Assignments</string>
    <string name="result_grade_desc">Grade</string>
    <string name="result_assignment1_desc">Assignment 1</string>
    <string name="result_assignment2_desc">Assignment 2</string>
    <string name="result_grade">A</string>
    <string name="result_exam_desc">Exam</string>
    <string name="result_exam_mark_desc">Marks</string>
    <string name="exam_subject1_desc">Mathematics</string>
    <string name="result_subject2_desc">Physics</string>
    <string name="result_subject3_desc">Chemistry</string>
    <string name="result_mark">70%</string>
    <string name="result_mark_total_desc">Total Exam Marks</string>
    <string name="result_mark_total">210</string>
    <string name="result_add_title">Add Result</string>
    <string name="result_student_no_desc">Student No :</string>
    <string name="result_student_name_desc">Student Name :</string>
    <string name="result_student_email_desc">Student Email :</string>
    <string name="result_student_details_desc">Student Details</string>
    <string name="result_subject_desc">Subjects</string>
    <string name="result_sub1_desc">Subject 1</string>
    <string name="result_sub2_desc">Subject 2</string>
    <string name="result_sub3_desc">Subject 3</string>
    <string name="result_student_enter_desc">Enter Student No</string>
    <string name="result_assignment_add__title">Add Assignment Result</string>
    <string name="result_update_delete_title">Update or Delete Result</string>
    <string name="result_assignment_update_delete_title">Update or Delete Assignment Result</string>
    <string name="todo_list_main_head">ToDo List</string>
    <string name="todo_form_main_head">Add Task</string>
    <string name="todo_form_task_txt">Enter task here</string>
    <string name="todo_form_date_txt">Select date</string>
    <string name="todo_form_update">Update Task</string>
    <string name="subject_list_main_head">My Subjects</string>
    <string name="add_subject_head">Add Subject</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="teacher_name">Enter Teacher\'s Name</string>
    <string name="description">Enter Description</string>
    <string name="update_subject_head">Update Subject</string>
    <string name="manage_subjects_head">Manage Subjects</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="time_tables">Time Tables</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="wijayarathna_p_g_r_c">Wijayarathna P.G.R.C.</string>
    <string name="notice_id">Notice Id:</string>
    <string name="manageTaskTital">Manage Task</string>
    <string name="submitTask">Submit</string>
    <string name="manageSubject">Mange Subjects</string>
    <string name="enterChapter">Enter Number of Chapters</string>
    <string name="enterSbjInfo">Enter Subject Description</string>
    <string name="subjectDashboard">Subjects</string>
    <string name="taskListPending">Pending tasks</string>
    <string name="taskListFinished">Finished tasks</string>
    <string name="taskListFailed">Failed tasks</string>
    <string name="mailspringitp_gmail_com">mailspringitp@gmail.com</string>

</resources>