<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_message1"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_message2"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_message3"
            android:icon="@drawable/ic_time_tables"
            android:title="@string/time_tables" />

    </group>


    <item android:title="Message">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_baseline_contacts"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/nav_Payment"
                    android:icon="@drawable/ic_baseline_monetization_on_24"
                    android:title="Finance" />
            </group>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
        <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share2"
            android:icon="@drawable/ic_power"
            android:title="@string/logout" />

        </group></menu>
    </item>

</menu>
