<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowResult"
    android:orientation="vertical"
    android:background="@color/home_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/tool_bar_background">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textColor="@android:color/white" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/header_background"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/unnamed2"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/grade_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/profile_image"
            android:text="@string/result_student_email"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/grade_email"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@+id/profile_image"
            android:fontFamily="@font/amaranth_bold"
            android:includeFontPadding="false"
            android:text="@string/result_student_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grade_email"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/profile_image"
            android:text="@string/result_student_no"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>



    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:layout_width="match_parent"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/header_background"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <TextView
                    android:fontFamily="@font/amaranth_bold"
                    android:id="@+id/student_rank"
                    android:includeFontPadding="false"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/result_student_rank_value"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/rank_desc"
                    android:includeFontPadding="false"
                    android:layout_below="@id/student_rank"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/result_student_rank"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/header_background"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <TextView
                    android:fontFamily="@font/amaranth_bold"
                    android:id="@+id/student_avg"
                    android:includeFontPadding="false"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/result_student_avg_value"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/avg_desc"
                    android:includeFontPadding="false"
                    android:layout_below="@id/student_avg"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/result_student_avg"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TableRow
            android:background="@color/header_background">
            <TextView
                android:layout_column="1"
                android:text="@string/result_assignment_desc"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black">
            </TextView>
            <TextView
                android:layout_column="2"
                android:text="@string/result_grade_desc"
                android:padding="10dp"
                android:textSize="18sp"
                android:gravity="right"
                android:layout_marginRight="35dp"

                android:textColor="@android:color/black">
            </TextView>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/result_assignment1_desc"
                android:padding="3dip"
                />
            <TextView
                android:layout_column="2"
                android:text="@string/result_grade"
                android:gravity="right"
                android:padding="3dip"
                android:layout_marginRight="45dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/result_assignment2_desc"
                android:padding="3dip" />
            <TextView
                android:layout_column="2"
                android:text="@string/result_grade"
                android:gravity="right"
                android:padding="3dip"
                android:layout_marginRight="45dp"/>
        </TableRow>



    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TableRow
            android:background="@color/header_background">
            <TextView
                android:layout_column="1"
                android:text="@string/result_exam_desc"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black">
            </TextView>

            <TextView
                android:layout_column="2"
                android:text="@string/result_exam_mark_desc"
                android:padding="10dp"
                android:textSize="18sp"
                android:gravity="right"
                android:layout_marginRight="35dp"

                android:textColor="@android:color/black">
            </TextView>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/exam_subject1_desc"
                android:padding="3dip"
                />
            <TextView
                android:layout_column="2"
                android:text="@string/result_mark"
                android:gravity="right"
                android:padding="3dip"
                android:layout_marginRight="35dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/result_subject2_desc"
                android:padding="3dip" />
            <TextView
                android:layout_column="2"
                android:text="@string/result_mark"
                android:gravity="right"
                android:padding="3dip"
                android:layout_marginRight="35dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/result_subject3_desc"
                android:padding="3dip" />
            <TextView
                android:layout_column="2"
                android:text="@string/result_mark"
                android:gravity="right"
                android:padding="3dip"
                android:layout_marginRight="35dp"/>
        </TableRow>

        <TableRow
            android:background="@color/header_background">
            <TextView
                android:layout_column="1"
                android:text="@string/result_mark_total_desc"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black">
            </TextView>
            <TextView
                android:layout_column="2"
                android:text="@string/result_mark_total"
                android:padding="10dp"
                android:textSize="18sp"
                android:gravity="right"
                android:layout_marginRight="35dp"

                android:textColor="@android:color/black">
            </TextView>
        </TableRow>
    </TableLayout>
</LinearLayout>
